--- a/Week 4/todo/pubspec.yaml
+++ b/Week 4/todo/pubspec.yaml
@@ -1,5 +1,5 @@
-name: todo
-description: A new Flutter project.
+name: animated_loginpage_app
+description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -28,6 +28,24 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_auth: ^1.1.4
+  cloud_firestore: ^2.1.0
+  firebase_core: ^1.1.1
+  google_sign_in: ^5.0.3
+  font_awesome_flutter: ^9.0.0
+  provider: ^5.0.0
+  shared_preferences: ^2.0.5
+  image_picker: ^0.7.5
+  line_icons: ^2.0.1
+  google_nav_bar: ^5.0.5
+  firebase_storage: ^8.1.0
+  fluttertoast: ^8.0.7
+  velocity_x: ^3.0.0
+  lottie: ^1.0.1
+  uuid: ^3.0.4
+  firebase_messaging: ^10.0.0
+  flutter_local_notifications: ^6.0.0
+
 
 dev_dependencies:
   flutter_test:
@@ -45,8 +63,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
