--- a/Week 4/todo/web/manifest.json
+++ b/Week 4/todo/web/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "todo",
-    "short_name": "todo",
+    "name": "animated_loginpage_app",
+    "short_name": "animated_loginpage_app",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "A new Flutter application.",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
