--- a/Week 4/pubspec.yaml
+++ b/Week 4/pubspec.yaml
@@ -1,4 +1,4 @@
-name: animated_loginpage_app
+name: catalog_app
 description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -47,6 +47,7 @@ dependencies:
   flutter_local_notifications: ^6.0.0
 
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -64,7 +65,14 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/
+   - assets/images/
+   - assets/images/login_image.png
+   - assets/images/SignUp.png
+   - assets/images/read_img.png
+   - assets/images/upload.png
+   - assets/lottie/splash.json
+   - assets/images/reading.gif
+   - assets/images/Learning.gif
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -78,17 +86,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Poppins
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
